--- a/form.html
+++ b/form.html
@@ -13,7 +13,7 @@
         <div class="form-group">
           <label for="text">Password</label>
           <input type="text" class="form-control" id="password">
-        </div><br>
+        </div>
         <!-- <div class="form-group form-check">
           <input type="checkbox" class="form-check-input" id="exampleCheck1">
           <label class="form-check-label" for="exampleCheck1">Check me out</label>
